--- a/src/styles/personalform.css
+++ b/src/styles/personalform.css
@@ -1,6 +1,7 @@
 .form_fields {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
+  margin: 15px;
 }
 
 .form_field label {
@@ -56,7 +57,7 @@ input {
   justify-content: flex-end;
   position: absolute;
   bottom: 30px;
-  right: 0;
+  right: 30px;
 }
 
 .form_buttons button {
