--- a/src/styles/personalList.css
+++ b/src/styles/personalList.css
@@ -2,10 +2,11 @@
   display: flex;
   margin: 10px;
   border-radius: 1px;
-  box-shadow: 0px 0px 3px 1px #cacaca;
+  box-shadow: 0px 0px 8px 1px #cacaca;
   align-items: center;
   height: 100px;
   flex: 0 0 270px;
+  padding-left: 10px;
 }
 .avatar {
   width: 60px;
@@ -46,6 +47,7 @@
 .card_list {
   display: flex;
   flex-wrap: wrap;
+  margin: 20px 20px;
 }
 .create_member {
   justify-content: center;
