--- a/src/styles/tabcontainer.css
+++ b/src/styles/tabcontainer.css
@@ -1,8 +1,10 @@
 .tab-container {
-  max-width: 820px;
   margin: auto;
   height: 500px;
-  box-shadow: 0 0 5px 1px #cec8c8;
-  max-width: 900px;
+  box-shadow: 0 0 7px 3px #e2e2e2;
+  flex-basis: 920px;
   position: relative;
+}
+.content {
+  text-align: center;
 }
